repleced phase to correct

--- a/COCR_Cac18_temp.ipynb
+++ b/COCR_Cac18_temp.ipynb
@@ -3212,7 +3212,7 @@
     "\n",
     "        eq_temp = equilibrium(db10, elements, phases10, conditions, parameters = temp_dict)\n",
     "\n",
-    "        temp = from_xarray_to_pandas(eq_temp, 'SIGMA_OLD')\n",
+    "        temp = from_xarray_to_pandas(eq_temp, phase)\n",
     "        y_temp = temp['cr_conc'].to_numpy() \n",
     "        # t_temp = temp['T'].to_numpy()\n",
     "        \n",
