added type of constant in .filna()

--- a/from_xarray_to_pandas.ipynb
+++ b/from_xarray_to_pandas.ipynb
@@ -224,19 +224,18 @@
     "def from_xarray_to_pandas(xarray_data, component_str, goal_phase_str):\n",
     "\n",
     "    import numpy as np\n",
+    "    import pandas as pd\n",
     "    \n",
     "    cr_tuple = xarray_data.X.sel(component=component_str).data[0][0]\n",
     "    phase_tuple = xarray_data.Phase.data[0][0]\n",
     "    t_tuple = xarray_data.T.data\n",
-    "    len = t_tuple.size\n",
-    "\n",
+    "    \n",
     "    df = pd.DataFrame()\n",
     "\n",
     "    # создали таблицу со всеми данными\n",
     "    for i in range(phase_tuple.shape[2]):\n",
     "        df_temp = pd.DataFrame(columns=['T','num','phase','conc'])\n",
     "        df_temp['T'] = t_tuple\n",
-    "        df_temp['num'] = np.array([i]*len)\n",
     "        df_temp['phase'] = phase_tuple[:, 0, i]\n",
     "        df_temp['conc'] = cr_tuple[:, 0, i]\n",
     "        \n",
@@ -252,9 +251,9 @@
     "\n",
     "    # заменили NaN значения\n",
     "    df_res['phase'].fillna(goal_phase_str, inplace=True)\n",
-    "    df_res['conc'].fillna(10, inplace=True)\n",
+    "    df_res['conc'].fillna(np.float32(10), inplace=True)\n",
     "\n",
-    "    return df_res\n"
+    "    return df_res"
    ]
   },
   {
