--- a/CoCr18_chains_analysis.ipynb
+++ b/CoCr18_chains_analysis.ipynb
@@ -3621,7 +3621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -3630,7 +3630,7 @@
        "<Axes: ylabel='Count'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3646,7 +3646,27 @@
     }
    ],
    "source": [
-    "sns.histplot(mse_par_dict['GSCRCO2'], element=\"poly\") #, kde=True element=\"poly\"\n"
+    "sns.histplot(mse_par_dict['GSCRCO2'], element=\"poly\") #, kde=True element=\"poly\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6319696442224085e-05"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(mse_par_dict['GSCRCO2'])"
    ]
   },
   {
@@ -3737,6 +3757,85 @@
    ],
    "source": [
     "sns.histplot(mse_par_dict['GSCOCR3'], element=\"poly\") #, kde=True element=\"poly\"\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Апостериорная вероятность"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'GSCRCO1': 1.0,\n",
+       " 'GSCOCRCO1': 1.0,\n",
+       " 'GSCOCRCO2': 0.588,\n",
+       " 'GSCRCO2': 0.622,\n",
+       " 'GSCOCR1': 1.0,\n",
+       " 'GSCOCR2': 1.0,\n",
+       " 'GSCOCR3': 1.0}"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ppp_dict = dict()\n",
+    "ln_ppp_dict = dict()\n",
+    "di = 0.000001\n",
+    "\n",
+    "for par in par_list:\n",
+    "    list_cnt = [x for x in mse_par_dict[par] if x <= di]\n",
+    "\n",
+    "    if len(list_cnt) == 0:\n",
+    "        print(par)\n",
+    "        mean = np.mean(mse_par_dict[par])\n",
+    "        std = np.std(mse_par_dict[par])\n",
+    "        # не подходит для любого параметра, только для норм распределнного\n",
+    "        ppp_dict[par] = scipy.stats.norm(mean, std).pdf(di)\n",
+    "    else:\n",
+    "        # print(par)\n",
+    "        # print(len(list_cnt))\n",
+    "        # print(num)\n",
+    "        ppp_dict[par] = len(list_cnt)/num\n",
+    "\n",
+    "    ln_ppp_dict[par] = np.log(ppp_dict[par])\n",
+    "\n",
+    "ppp_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.005843517326468"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ppp = 0\n",
+    "\n",
+    "for par in par_list:\n",
+    "    ppp += ln_ppp_dict[par]\n",
+    "ppp"
    ]
   },
   {
